--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ requests==2.31.0
 beautifulsoup4==4.12.2
 python-dotenv==1.0.0
 langchain==0.1.12
+langchain-openai==0.1.8
+langchain-community==0.2.6
+langflow==0.6.9
 chromadb==0.4.22
 faiss-cpu==1.7.4
 scikit-learn==1.4.0
@@ -13,3 +16,8 @@ dataset==1.6.2
 openai==1.5.0
 selenium==4.12.0
 webdriver-manager==4.0.0
+tiktoken==0.5.2
+pydantic==2.6.1
+fastapi==0.109.2
+uvicorn==0.27.1
+streamlit==1.32.0
