--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,41 @@
-requests==2.31.0
-beautifulsoup4==4.12.2
-python-dotenv==1.0.0
-langchain==0.1.12
-langchain-openai==0.1.8
-langchain-community==0.2.6
-langflow==0.6.9
-chromadb==0.4.22
-faiss-cpu==1.7.4
-scikit-learn==1.4.0
-pandas==2.1.4
-tqdm==4.66.2
-PyPDF2==3.0.1
-argparse==1.4.0
-dataset==1.6.2
-openai==1.5.0
-selenium==4.12.0
-webdriver-manager==4.0.0
-tiktoken==0.5.2
-pydantic==2.6.1
-fastapi==0.109.2
-uvicorn==0.27.1
-streamlit==1.32.0
-firecrawl-py==0.6.0
-typing-extensions>=4.5.0
+# Core requirements
+requests>=2.31.0,<3.0.0
+beautifulsoup4>=4.12.2,<5.0.0
+python-dotenv>=1.0.0,<2.0.0
+tqdm>=4.66.2,<5.0.0
+PyPDF2>=3.0.1,<4.0.0
+pydantic>=2.6.1,<3.0.0
+typing-extensions>=4.5.0,<5.0.0
+
+# LangChain and related
+langchain>=0.1.12,<0.2.0
+langchain-openai>=0.1.8,<0.2.0
+langchain-community>=0.2.6,<0.3.0
+langflow>=0.6.9,<0.7.0
+openai>=1.5.0,<2.0.0
+
+# Vector stores and embeddings
+chromadb>=0.4.22,<0.5.0
+faiss-cpu>=1.7.4,<1.8.0
+scikit-learn>=1.4.0,<1.5.0
+tiktoken>=0.5.2,<0.6.0
+
+# Data processing
+pandas>=2.1.4,<3.0.0
+dataset>=1.6.2,<2.0.0
+
+# Web crawling and scraping
+selenium>=4.12.0,<5.0.0
+webdriver-manager>=4.0.0,<5.0.0
+firecrawl-py>=0.6.0,<0.7.0
+
+# Web application
+fastapi>=0.109.2,<0.110.0
+uvicorn>=0.27.1,<0.28.0
+streamlit>=1.32.0,<2.0.0
+
+# Testing
+pytest>=7.4.0,<8.0.0
+pytest-cov>=4.1.0,<5.0.0
+requests-mock>=1.11.0,<2.0.0
+mock>=5.1.0,<6.0.0
